--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-orbit-counts [satellites]="displayList"></app-orbit-counts>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
 <h1>Orbit Report</h1>
 
 <div class="search-form">
