--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,13 +1,12 @@
 <h3>Satellite Counts</h3>
 <div class="counts">
    <div>Total: <span>{{satellites.length}}</span></div>
-  <div>*ngFor="let type of types">{{type.type}}: <span>{{type.count}}</span>
-   <div>Space Debris: <span>{{typeCount('space debris')}}</span></div>
-   <div>Communication: <span>{{typeCount('communication')}}</span></div>
-   <div>Probe: <span>{{typeCount('probe')}}</span></div>
-   <div>Positioning: <span>{{typeCount('positioning')}}</span></div>
-   <div>Space Station: <span>{{typeCount('space station')}}</span></div>
-   <div>Telescope: <span>{{typeCount('telescope')}}</span></div>
+   <div>Space Debris: <span>{{countByType('space debris')}}</span></div>
+   <div>Communication: <span>{{countByType('communication')}}</span></div>
+   <div>Probe: <span>{{countByType('probe')}}</span></div>
+   <div>Positioning: <span>{{countByType('positioning')}}</span></div>
+   <div>Space Station: <span>{{countByType('space station')}}</span></div>
+   <div>Telescope: <span>{{countByType('telescope')}}</span></div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
